[gd_scene load_steps=23 format=3 uid="uid://bcoan783pbvdq"]

[ext_resource type="Script" path="res://scripts/fishing/fishing_rod.gd" id="2_h6u5q"]
[ext_resource type="PackedScene" uid="uid://bsvi1o45dttw5" path="res://scenes/object_interaction/physical_grab_point_left.tscn" id="3_bkh4n"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="3_f4qqc"]
[ext_resource type="ArrayMesh" uid="uid://ckswc8hmax2mt" path="res://models/fishing/fishing_rod_FishingRodHighlight.res" id="3_u20iw"]
[ext_resource type="Material" uid="uid://nuogvh1u6wye" path="res://resources/highlight_material.tres" id="4_qy8k7"]
[ext_resource type="Animation" uid="uid://dqa0h82y3qn1t" path="res://addons/godot-xr-tools/hands/animations/left/Grip 1.res" id="5_lecea"]
[ext_resource type="ArrayMesh" uid="uid://j8ohwmy6wav2" path="res://models/fishing/fishing_rod_NurbsPath.res" id="5_nnjxc"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="6_0ucvv"]
[ext_resource type="ArrayMesh" uid="uid://n8jf5vvll3wx" path="res://models/fishing/fishing_rod_FishingRod.res" id="6_da81p"]
[ext_resource type="PackedScene" uid="uid://0a3edbceqgym" path="res://scenes/object_interaction/physical_grab_point_right.tscn" id="6_xhdl5"]
[ext_resource type="Animation" uid="uid://daqddcrbpam0c" path="res://addons/godot-xr-tools/hands/animations/right/Grip 1.res" id="8_3q68x"]
[ext_resource type="Script" path="res://scripts/fishing/fishing_float_target.gd" id="10_bvdsn"]
[ext_resource type="PackedScene" uid="uid://dil16xqh8spna" path="res://scenes/fishing/fishing_float.tscn" id="11_apdnu"]
[ext_resource type="PackedScene" uid="uid://7adcm63eh1yv" path="res://scenes/object_interaction/physical_grab_point_snap.tscn" id="12_0fugb"]
[ext_resource type="PackedScene" uid="uid://csdvq8wulxb4g" path="res://scenes/utils/line.tscn" id="12_1hf0y"]
[ext_resource type="Material" uid="uid://b6dy24oasdds8" path="res://resources/M_String.tres" id="13_ahgwm"]

[sub_resource type="Skin" id="Skin_i4qpt"]
resource_name = "Skin"
bind_count = 2
bind/0/name = &"Handle"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, -0.0164617, -0.999865, 0, 0.999865, -0.0164617, 0, 0.587906, -0.0125141)
bind/1/name = &"Spinner"
bind/1/bone = -1
bind/1/pose = Transform3D(-1, -1.23751e-14, 1.50996e-07, 8.94063e-15, 1, 1.41561e-07, -1.50996e-07, 8.19564e-08, -1, -6.42766e-08, 0.0371779, 0.425685)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_21ums"]
margin = 0.01
height = 1.57
radius = 0.03

[sub_resource type="BoxShape3D" id="BoxShape3D_bung3"]
margin = 0.01
size = Vector3(0.08, 0.08, 0.08)

[sub_resource type="Resource" id="Resource_ea7xt"]
script = ExtResource("6_0ucvv")
closed_pose = ExtResource("5_lecea")

[sub_resource type="Resource" id="Resource_errwh"]
script = ExtResource("6_0ucvv")
closed_pose = ExtResource("8_3q68x")

[sub_resource type="CylinderMesh" id="CylinderMesh_ox2mw"]
material = ExtResource("13_ahgwm")
top_radius = 0.001
bottom_radius = 0.001
height = 0.123798

[node name="FishingRod" type="RigidBody3D" groups=["fishing_rod"]]
collision_layer = 4
collision_mask = 196615
mass = 0.1
continuous_cd = true
script = ExtResource("2_h6u5q")

[node name="XRToolsHighlightVisible" type="Node3D" parent="."]
script = ExtResource("3_f4qqc")

[node name="FishingRodHighlight" type="MeshInstance3D" parent="XRToolsHighlightVisible"]
mesh = ExtResource("3_u20iw")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("4_qy8k7")

[node name="FishingRodArmature" type="Node3D" parent="."]

[node name="FishingRod" type="Node3D" parent="FishingRodArmature"]

[node name="String" type="MeshInstance3D" parent="FishingRodArmature/FishingRod"]
transform = Transform3D(1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, 0, 0)
mesh = ExtResource("5_nnjxc")
skeleton = NodePath("")

[node name="Skeleton3D" type="Skeleton3D" parent="FishingRodArmature"]
bones/0/name = "Handle"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, -0.0164616, 0.999865, 0, -0.999865, -0.0164616, 0, 0.0221904, 0.587621)
bones/0/enabled = true
bones/0/position = Vector3(0, 0.0221904, 0.587621)
bones/0/rotation = Quaternion(-0.712903, 0, 0, 0.701263)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Spinner"
bones/1/parent = 0
bones/1/rest = Transform3D(-1, -7.10543e-15, -1.50996e-07, -1.50975e-07, -0.0164617, 0.999864, -2.48566e-09, 0.999864, 0.0164617, 0, 0.162891, -0.0566946)
bones/1/enabled = true
bones/1/position = Vector3(0, 0.162891, -0.0566946)
bones/1/rotation = Quaternion(-5.38227e-08, 0.701263, 0.712903, -5.29438e-08)
bones/1/scale = Vector3(1, 1, 1)

[node name="FishingRod" type="MeshInstance3D" parent="FishingRodArmature/Skeleton3D"]
mesh = ExtResource("6_da81p")
skin = SubResource("Skin_i4qpt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0152102, -0.154772)
shape = SubResource("CylinderShape3D_21ums")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.035488, 0.426556)
shape = SubResource("BoxShape3D_bung3")

[node name="PhysicalGrabPointLeft" parent="." instance=ExtResource("3_bkh4n")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.0556926, 0.482034)
mode = 1
hand_pose = SubResource("Resource_ea7xt")

[node name="PhysicalGrabPointRight" parent="." instance=ExtResource("6_xhdl5")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.0557516, 0.481948)
mode = 1
hand_pose = SubResource("Resource_errwh")

[node name="GrabPointSnap" parent="." instance=ExtResource("12_0fugb")]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, -0.665633)

[node name="FloatTarget" type="Node3D" parent="."]
editor_description = "This node represents the position that the fishing float will be at when connected to the fishing rod."
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, -0.941)
script = ExtResource("10_bvdsn")

[node name="StringStart" type="Node3D" parent="."]
editor_description = "This node displays the position that the fishing rod string starts at (it ends at the fishing float)."
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0265145, -0.932214)

[node name="Line" parent="." node_paths=PackedStringArray("start_point", "end_point") instance=ExtResource("12_1hf0y")]
transform = Transform3D(0.999994, 0, 0, 0, 0.997456, -0.0709688, 0, 0.0709688, 0.997456, 0, -0.0882572, -0.936607)
top_level = true
mesh = SubResource("CylinderMesh_ox2mw")
skeleton = NodePath("../..")
radius = 0.001
material = ExtResource("13_ahgwm")
start_point = NodePath("../StringStart")
end_point = NodePath("../FishingFloat")

[node name="FishingFloat" parent="." instance=ExtResource("11_apdnu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, -0.941)
max_contacts_reported = 1

[node name="FishingRod" type="Node3D" parent="."]
